<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/synchronization">

        <SwitchPreference
            android:key="synchronization_of_covers"
            android:defaultValue="true"
            android:title="@string/synchronization_from_network" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_of_saving"
        android:title="@string/saving">

        <SwitchPreference
            android:key="saving_of_covers"
            android:defaultValue="false"
            android:title="@string/saving_of_covers" />

        <CheckBoxPreference
            android:key="saving_with_replacement"
            android:defaultValue="false"
            android:enabled="false"
            android:title="@string/save_with_replacement" />

    <PreferenceCategory android:title="@string/load_from_memory">

        <SwitchPreference
            android:key="loading_of_covers"
            android:defaultValue="true"
            android:title="@string/loading_of_covers" />

    </PreferenceCategory>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about" >
        <EditTextPreference
            android:key="about"
            android:enabled="false"
            android:summary="@string/about_summary"/>
    </PreferenceCategory>

</PreferenceScreen>
