<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/searchAlbums"
        android:inputType="text"
        android:icon="@mipmap/ic_search_foreground"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:title="@string/action_share"
        app:showAsAction="never"
        android:background="@null" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />
</menu>